# docker

./: Dockerfile  Makefile  README.md  Readme.dev  mediadoc-container.service  runscreenrc.sh  runscreenrc.sh.desktop  screenrc  start-container.sh  stop-container.sh  stop-ubuntu.sh
logs/: README.logs
setup/: config.yaml
setup/kibana_dashboards/: Dashboards.json  Index-Pattern.json  Search.json  Visualization.json
src/: build-all.sh  run  screenrc  start-all-services.sh  start.sh  stop-all-services.sh
src/AppSw/: CcuAppAlertDb.json  CcuKafkaMessage.cpp  CcuKafkaMessage.h  Makefile  Makefile.am  configure  configure.ac  mediadoc-builds.sh  mediadoc-elastic-indices-manager.sh
src/DevAbs/: CcuUpsConfig.json  CcuUpsController.cpp  CcuUpsController.h  CcuUpsSnmpGet.cpp  CcuUpsSnmpGet.h  CcuUpsSnmpTrap.cpp  CcuUpsSnmpTrap.h  Makefile.am  configure  configure.ac  kafkaPlayer.py  kafkaRecorder.py  mediadoc-close-elastic-indices.sh  mediadoc-delete-elastic-indices.sh  mediadoc-dynamic-db-init.sh  mediadoc-kibana-fix.sh  mediadocBPInfo.py  mediadocBPSetting.py  mediadocBPSummary.py  mediadocBPSummary1.py
src/DevAbs/smqisccuhw/: KafkaManager.py  util.py
src/DevAbs/smqisccuhw/__pycache__/: .KafkaManager.cpython-36.pyc.swp
src/UI/Kibana/: Kibana-CCU.json
src/config/: hosts.docker  kibana_backup.json  media-doc-ES-elasticsearch.yml  media-doc-ES-jvm.options  media-doc-Logstash.conf
utilities/reverse_ssh/: rSSHmainatainer.py
utilities/watchdog/: ccu_watchdog.py
