#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_PREREQ([2.69])
AC_INIT([AppSw], [1.0], [arvind.umrao@yahoo.com])
AM_INIT_AUTOMAKE(AppSw, 1.0)
#AUTOMAKE_OPTIONS = foreign
#SUBDIRS =
AC_CONFIG_SRCDIR([.])
#AC_CONFIG_HEADERS([])
# Checks for programs.
AC_PROG_CXX
AC_PROG_CPP
# Checks for libraries.
AC_PROG_RANLIB
# Checks for header files.
AC_CHECK_HEADERS([])
# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
# Checks for library functions.
AC_CHECK_FUNCS([])
AC_OUTPUT(Makefile)
